[gd_scene load_steps=8 format=2]

[ext_resource path="res://Model/buttons/gameModeButtons/NormalModeButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Model/buttons/gameModeButtons/ChallengeModeButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Model/buttons/gameModeButtons/CustomModeButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://View/basicMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Control/interface/ReturnToMainMenu.gd" type="Script" id=5]
[ext_resource path="res://Control/interface/PlayMenuButtons.gd" type="Script" id=6]
[ext_resource path="res://Control/interface/playMenuScript.gd" type="Script" id=7]

[node name="World" instance=ExtResource( 4 )]

[node name="Header" parent="TemplateScreen" index="3"]
text = "PLAY MENU"

[node name="PlayBoard" parent="." index="1"]
margin_left = -289.0
margin_top = 144.0
margin_bottom = -60.0
script = ExtResource( 7 )

[node name="Menu" type="VBoxContainer" parent="PlayBoard" index="0"]
margin_left = 1.0
margin_top = -51.0
margin_right = 576.0
margin_bottom = 396.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="PlayBoard/Menu" index="0"]
margin_right = 575.0
margin_bottom = 447.0
size_flags_vertical = 3
custom_constants/separation = 70
alignment = 1

[node name="NormalModeButton" parent="PlayBoard/Menu/Buttons" index="0" instance=ExtResource( 1 )]
self_modulate = Color( 0.854902, 0.333333, 0.333333, 1 )
margin_top = 78.0
margin_right = 575.0
margin_bottom = 128.0
rect_min_size = Vector2( 360, 50 )
script = ExtResource( 6 )
scene_to_load = "res://View/gameModes/NormalModeSelectWorld.tscn"

[node name="ChallengeModeButton" parent="PlayBoard/Menu/Buttons" index="1" instance=ExtResource( 2 )]
self_modulate = Color( 0.854902, 0.333333, 0.333333, 1 )
margin_top = 198.0
margin_right = 575.0
margin_bottom = 248.0
rect_min_size = Vector2( 360, 50 )
script = ExtResource( 6 )
scene_to_load = "res://View/gameModes/ChallengeModeSelect.tscn"

[node name="CustomModeButton" parent="PlayBoard/Menu/Buttons" index="2" instance=ExtResource( 3 )]
self_modulate = Color( 0.854902, 0.333333, 0.333333, 1 )
margin_top = 318.0
margin_right = 575.0
margin_bottom = 368.0
rect_min_size = Vector2( 360, 50 )
script = ExtResource( 6 )
scene_to_load = "res://View/gameModes/CustomModeSelect.tscn"

[node name="BackButton" parent="." index="2"]
script = ExtResource( 5 )
[connection signal="pressed" from="PlayBoard/Menu/Buttons/NormalModeButton" to="PlayBoard/Menu/Buttons/NormalModeButton" method="_on_NormalModeButton_pressed"]
[connection signal="pressed" from="BackButton" to="BackButton" method="_on_BackButton_pressed"]
